Settings Panel Fix
Fixed the overlapping of the settings panel

--- a/css/style.css
+++ b/css/style.css
@@ -122,7 +122,7 @@ html, body {
 #calendar_wrapper #headline #settings {
     margin:-1.25em 0 0 0.25em;
     float:left;
-    width:95%;
+    width:88%;
 }
 
 #calendar_wrapper #headline #settings img {
